--- a/pages/project-2.html
+++ b/pages/project-2.html
@@ -2,9 +2,22 @@
 <html lang="en">
 
 <head>
+    <!-- Meta tags added -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Marija Popeska">
+    <meta name="keywords" content="ux designer, architecture, digital experience, portfolio">
+    <meta name="description" content="Explore the design process of an intuitive grocery delivery app.">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="google" content="nositelinkssearchbox">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="rating" content="adult">
+    <meta property="og:image" content="../assets/img/grocery-app/img-1.jpg">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="600">
+    <title>Grocery App UX Design Case Study</title>
+
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <!-- TailwindCSS -->
@@ -76,8 +89,13 @@
                             app
                             is designed to cater to your unique preferences and lifestyle.</p>
                     </div>
-                    <img class="mt-10 h-[300px] md:h-[500px] w-full object-cover"
-                        src="../assets/img/grocery-app/img-1.jpg" alt="">
+                    <picture>
+                        <source srcset="../assets/img/grocery-app/img-1.jpg 800w,
+                             ../assets/img/grocery-app/img-1.jpg 480w,
+                             ../assets/img/grocery-app/img-1.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
+                        <img class="mt-10 h-[300px] md:h-[500px] w-full object-cover"
+                            src="../assets/img/grocery-app/img-1.jpg" alt="Final image">
+                    </picture>
                 </div>
             </div>
         </div>
@@ -121,10 +139,20 @@
                             competitors' offerings, strengths, and weaknesses to glean insights that can inform your own
                             app's design and positioning.</p>
                     </div>
-                    <img class="mt-10 h-full md:h-full w-full object-cover" src="../assets/img/grocery-app/img-2.jpg"
-                        alt="">
-                    <img class="mt-10 h-full md:h-full w-full object-cover" src="../assets/img/grocery-app/img-3.jpg"
-                        alt="">
+                    <picture>
+                        <source srcset="../assets/img/grocery-app/img-2.jpg 800w,
+                             ../assets/img/grocery-app/img-2.jpg 480w,
+                             ../assets/img/grocery-app/img-2.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
+                        <img class="mt-10 h-full md:h-full w-full object-cover"
+                            src="../assets/img/grocery-app/img-2.jpg" alt="Final image">
+                    </picture>
+                    <picture>
+                        <source srcset="../assets/img/grocery-app/img-3.jpg 800w,
+                             ../assets/img/grocery-app/img-3.jpg 480w,
+                             ../assets/img/grocery-app/img-3.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
+                        <img class="mt-10 h-full md:h-full w-full object-cover"
+                            src="../assets/img/grocery-app/img-3.jpg" alt="Final image">
+                    </picture>
                     <div class="space-y-6 mt-6">
                         <p>Research says the grocery delivery and shopping experience are turning out to be
                             the
@@ -198,10 +226,14 @@
                             user base we aim to serve. Through empathetic storytelling and data-driven insights, these
                             personas help ensure that the app is tailored to meet the needs of real users in real-world
                             scenarios.</p>
-                        <div class="flex justify-center mx-auto">
-                            <img class="mt-10" src="../assets/img/grocery-app/user-personas.jpg" alt="">
-                        </div>
-
+                        <picture class="flex justify-center mx-auto">
+                            <source srcset="../assets/img/grocery-app/user-personas.jpg 800w,
+                                     ../assets/img/grocery-app/user-personas.jpg 480w,
+                                     ../assets/img/grocery-app/user-personas.jpg 320w"
+                                sizes="(max-width: 800px) 100vw, 800px">
+                            <img class="mt-10 h-full md:h-full w-full object-cover"
+                                src="../assets/img/grocery-app/user-personas.jpg" alt="Final image">
+                        </picture>
                     </div>
                 </div>
             </div>
@@ -212,7 +244,13 @@
                     exploring various
                     layouts and features. This process helps me visualize the app structure and functionality
                     before moving on to digital wireframes and prototypes.</p>
-                <img class="mt-10" src="../assets/img/grocery-app/sketches.jpg" alt="">
+                <picture class="flex justify-center mx-auto">
+                    <source srcset="../assets/img/grocery-app/sketches.jpg 800w,
+                                 ../assets/img/grocery-app/sketches.jpg 480w,
+                                 ../assets/img/grocery-app/sketches.jpg 320w" sizes="(max-width: 800px) 100vw, 800px">
+                    <img class="mt-10 h-full md:h-full w-full object-cover" src="../assets/img/grocery-app/sketches.jpg"
+                        alt="Final image">
+                </picture>
             </div>
             <div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
                 <h3 class="mt-10 mb-6 underline text-xl md:text-3xl font-futura lg:text-2xl text-slate-600">
@@ -222,7 +260,14 @@
                     fidelity and then refined into high fidelity prototypes. Prototyping these flows in high fidelity
                     allows for a detailed assessment of usability and hierarchy. Throughout the defining phase, I
                     experimented with various concepts and layouts.</p>
-                <img class="mt-10" src="../assets/img/grocery-app/wireframes.jpg" alt="">
+                <picture class="flex justify-center mx-auto">
+                    <source srcset="../assets/img/grocery-app/wireframes.jpg 800w,
+                                     ../assets/img/grocery-app/wireframes.jpg 480w,
+                                     ../assets/img/grocery-app/wireframes.jpg 320w"
+                        sizes="(max-width: 800px) 100vw, 800px">
+                    <img class="mt-10 h-full md:h-full w-full object-cover"
+                        src="../assets/img/grocery-app/wireframes.jpg" alt="Final image">
+                </picture>
             </div>
             <div class="px-0 md:px-10 lg:px-[200px] flex flex-col items-start justify-center text-start">
                 <h3 class="mt-10 mb-6 underline text-xl md:text-3xl font-futura lg:text-2xl text-slate-600">
@@ -231,7 +276,14 @@
                     features of the final solution for the grocery delivery app. Each screen is designed to prioritize
                     usability, functionality, and aesthetics, providing users with an enjoyable and efficient shopping
                     experience.</p>
-                <img class="mt-10" src="../assets/img/grocery-app/final-screens.jpg" alt="">
+                <picture class="flex justify-center mx-auto">
+                    <source srcset="../assets/img/grocery-app/final-screens.jpg 800w,
+                                         ../assets/img/grocery-app/final-screens.jpg 480w,
+                                         ../assets/img/grocery-app/final-screens.jpg 320w"
+                        sizes="(max-width: 800px) 100vw, 800px">
+                    <img class="mt-10 h-full md:h-full w-full object-cover"
+                        src="../assets/img/grocery-app/final-screens.jpg" alt="Final image">
+                </picture>
             </div>
         </section>
     </section>
