--- a/pages/collection.html
+++ b/pages/collection.html
@@ -2,9 +2,22 @@
 <html lang="en">
 
 <head>
+    <!-- Meta tags added -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Marija Popeska">
+    <meta name="keywords" content="ux designer, architecture, digital experience, portfolio">
+    <meta name="description" content="Showcasing diverse projects and solutions.">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="google" content="nositelinkssearchbox">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="rating" content="adult">
+    <meta property="og:image" content="../assets/img/collection/img-1.jpg">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="600">
+    <title>Design collection showcase</title>
+
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <!-- TailwindCSS -->
@@ -105,7 +118,14 @@
 
                             </p>
                         </div>
-                        <img class="mt-10" src="../assets/img/collection/img-2.jpg" alt="">
+                        <picture>
+                            <source srcset="../assets/img/collection/img-2.jpg 800w,
+                                            ../assets/img/collection/img-2.jpg 480w,
+                                            ../assets/img/collection/img-2.jpg 320w"
+                                sizes="(max-width: 800px) 100vw, 800px">
+                            <img class="mt-10 h-full md:h-full w-full object-cover"
+                                src="../assets/img/collection/img-2.jpg" alt="Final image">
+                        </picture>
                     </div>
                     <!-- Nike -->
                     <div class=" px-0 md:px-10 lg:px-[200px]" data-aos="fade-left" data-aos-duration="700">
@@ -157,8 +177,22 @@
                             <p>
                             </p>
                         </div>
-                        <img class="mt-10" src="../assets/img/collection/img-3.jpg" alt="">
-                        <img class="mt-10" src="../assets/img/collection/img-4.jpg" alt="">
+                        <picture>
+                            <source srcset="../assets/img/collection/img-3.jpg 800w,
+                                            ../assets/img/collection/img-3.jpg 480w,
+                                            ../assets/img/collection/img-3.jpg 320w"
+                                sizes="(max-width: 800px) 100vw, 800px">
+                            <img class="mt-10 h-full md:h-full w-full object-cover"
+                                src="../assets/img/collection/img-3.jpg" alt="Final image">
+                        </picture>
+                        <picture>
+                            <source srcset="../assets/img/collection/img-4.jpg 800w,
+                                            ../assets/img/collection/img-4.jpg 480w,
+                                            ../assets/img/collection/img-4.jpg 320w"
+                                sizes="(max-width: 800px) 100vw, 800px">
+                            <img class="mt-10 h-full md:h-full w-full object-cover"
+                                src="../assets/img/collection/img-4.jpg" alt="Final image">
+                        </picture>
                     </div>
                     <!-- Menu display -->
                     <div class=" px-0 md:px-10 lg:px-[200px]" data-aos="fade-left" data-aos-duration="700">
@@ -201,7 +235,14 @@
                             <p>
                             </p>
                         </div>
-                        <img class="mt-10 mb-10" src="../assets/img/collection/img-5.jpg" alt="">
+                        <picture>
+                            <source srcset="../assets/img/collection/img-5.jpg 800w,
+                                            ../assets/img/collection/img-5.jpg 480w,
+                                            ../assets/img/collection/img-5.jpg 320w"
+                                sizes="(max-width: 800px) 100vw, 800px">
+                            <img class="mt-10 mb-10 h-full md:h-full w-full object-cover"
+                                src="../assets/img/collection/img-5.jpg" alt="Final image">
+                        </picture>
                         <div>
                             <p> Feel free to check out the project's repository on GitHub:</p>
                             <a class="underline mt-3 font-bold text-[#F36F64]"
