--- a/pages/about.html
+++ b/pages/about.html
@@ -15,8 +15,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="rating" content="adult">
     <meta property="og:image" content="../assets/img/m-logo.png">
-    <meta property="og:image:width" content="800">
-    <meta property="og:image:height" content="600">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="627">
+    <meta property="og:url" content="https://www.marijapopeska.com">
+    <meta property="og:title" content="Marija Popeska">
+    <meta property="og:description" content="I'm Marija Popeska, a friendly and
+        collaborative designer">
     <title>Marija Popeska</title>
 
     <!-- =====BOX ICONS===== -->
