--- a/pages/collection.html
+++ b/pages/collection.html
@@ -14,8 +14,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="rating" content="adult">
     <meta property="og:image" content="../assets/img/collection/img-1.jpg">
-    <meta property="og:image:width" content="800">
-    <meta property="og:image:height" content="600">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="627">
+    <meta property="og:url" content="https://www.marijapopeska.com">
+    <meta property="og:title" content="Design collection showcase">
+    <meta property="og:description" content="Showcasing diverse projects and solutions.">
     <title>Design collection showcase</title>
 
     <!-- =====BOX ICONS===== -->
