--- a/pages/project-1.html
+++ b/pages/project-1.html
@@ -14,8 +14,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="rating" content="adult">
     <meta property="og:image" content="../assets/img/dipsakus/unsplash_1.jpg">
-    <meta property="og:image:width" content="800">
-    <meta property="og:image:height" content="600">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="627">
+    <meta property="og:url" content="https://www.marijapopeska.com">
+    <meta property="og:title" content="Dipsakus UX Design Case Study">
+    <meta property="og:description" content="Explore the UX design case study of Dipsakus, a hiking club website.">
     <title>Dipsakus UX Design Case Study</title>
 
     <!-- =====BOX ICONS===== -->
