--- a/pages/project-2.html
+++ b/pages/project-2.html
@@ -14,8 +14,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="rating" content="adult">
     <meta property="og:image" content="../assets/img/grocery-app/img-1.jpg">
-    <meta property="og:image:width" content="800">
-    <meta property="og:image:height" content="600">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="627">
+    <meta property="og:url" content="https://www.marijapopeska.com">
+    <meta property="og:title" content="Grocery App UX Design Case Study">
+    <meta property="og:description" content="Explore the design process of an intuitive grocery delivery app.">
     <title>Grocery App UX Design Case Study</title>
 
     <!-- =====BOX ICONS===== -->
