--- a/pages/project-3.html
+++ b/pages/project-3.html
@@ -15,8 +15,12 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="rating" content="adult">
 	<meta property="og:image" content="../assets/img/cinevers/cinevers.jpg">
-	<meta property="og:image:width" content="800">
-	<meta property="og:image:height" content="600">
+	<meta property="og:image:width" content="1200">
+	<meta property="og:image:height" content="627">
+	<meta property="og:url" content="https://www.marijapopeska.com">
+	<meta property="og:title" content="Cinevers - Movie Website">
+	<meta property="og:description"
+		content="Welcome to my personal movie website project, where I've combined my passion for movies with my skills in frontend development.">
 	<title>Cinevers - Movie Website</title>
 
 	<!-- =====BOX ICONS===== -->
